--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -123,3 +123,8 @@
     @apply font-display bg-background text-foreground;
   }
 }
+
+/*This can be used to see where the element-boxes are.*/
+/** {*/
+/*    outline: 1px solid lime;*/
+/*}*/
